<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/desc_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/opac_desc_text"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/opq_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/opac_opq_txt"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/opacity_seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

    <Button
        android:id="@+id/opq_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opac_opq_ok" />
</LinearLayout>